[tool.poetry]
name = "atlassian-api-mcp"
version = "0.1.0"
description = ""
authors = ["kristofar.stavrev <kristofur.stavrev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^3.0.2"
beautifulsoup4 = "^4.14.3"
requests = "^2.32.5"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
